# cclog

./: .gitignore  CNAME  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  social-preview.html
cclog/: __init__.py  analytics.py  app.py  cli.py  metadata.py  parser.py  search.py
cclog/static/css/: style.css
cclog/static/js/: app.js
cclog/templates/: base.html  conversation.html  dashboard.html  import.html  landing.html  project_sessions.html  projects.html  search.html  tags.html
docs/: index.html
