[project]
name = "claude-log"
version = "0.1.2"
description = "Browse, search, and analyze your Claude Code conversation history"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "cli", "history", "search", "analytics"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "whoosh>=2.7",
    "markdown>=3.5",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/Zu-Tech/cclog"
Repository = "https://github.com/Zu-Tech/cclog"
Issues = "https://github.com/Zu-Tech/cclog/issues"

[project.scripts]
cclog = "cclog.cli:main"
claude-log = "cclog.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cclog*"]

[tool.setuptools.package-data]
cclog = ["templates/**/*.html", "static/**/*"]
